fix : ci에서 txt 읽을 수 있는 함수로 수정